--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				Mengyang Gu</a>. 
 				</p>
 
-				<img class="left" src="img/WechatIMG80.jpeg" width="530" height="353.3" alt="sample image">
+				<img class="left" src="WechatIMG80.jpeg" width="530" height="353.3" alt="sample image">
 
 			</div>
 			<p class = "about-para">
