--- a/index.html
+++ b/index.html
@@ -48,11 +48,9 @@
 
 			<div class="body">
 
-				<p>I am a Ph.D. candidate (ABD) from the <a href="https://engineering.jhu.edu/ams/">Department of Applied Mathematics and Statistics</a> at <a href="https://www.jhu.edu/">Johns Hopkins University</a>. 
-				<!-- Before I joined the Ph.D. program at JHU, I received my master degree in Applied Mathematics and Statistics at JHU.  -->
-				My major research focuses on developing Bayesian methods for various statistical problems with strong theoretical support. Specifically, I have been focusing on Bayes theory and methods for network data and high-dimensional problems, Bayes theory and methods for nonparametric problems, and Bayesian methods for computer experiments and uncertainty quantification. I have also developed new Bayesian methods for computational biology. 
-				My advisor/mentor is Dr. <a href = "http://www.ams.jhu.edu/~yxu70/index.html">Yanxun Xu</a>. I also collaborate with Prof. <a href = "https://www.ams.jhu.edu/~priebe/">Carey E. Priebe</a> and Dr. <a href = "https://sites.google.com/site/michaelmengyanggu/home">
-				Mengyang Gu</a>. 
+				<p>I am an assistant professor in the Department of Statistics at Indiana University. 
+				My major research focuses on developing Bayesian methods for various statistical problems with strong theoretical support. Specifically, I have been focusing on Bayes theory and methods for network data and high-dimensional problems, nonparametric Bayes, and Bayesian methods for computer experiments and uncertainty quantification. I have also developed new Bayesian methods for computational biology. 
+				I received my Ph.D. from the Department of Applied Mathematics and Statistics at Johns Hopkins University under the supervision of Dr. Yanxun Xu. 
 				</p>
 
 				<img class="left" src="WechatIMG80.jpeg" width="530" height="353.3" alt="sample image">
@@ -62,10 +60,7 @@
 	        <!-- <ul> -->
 	          <strong style="font-size: 1em; line-height: 1.5;"><font size="4">Contact</font></strong>
 	          <br />
-	          Whitehead Hall 100
-	          <br />3400 North Charles Street
-	          <br />Baltimore MD 21218-2628
-	          <br />fxie5 at jhu dot edu</a>
+	          <br />fxie at iu dot edu</a>
 	        <!-- </ul> -->
 	        </p>
 	        <p >
@@ -414,20 +409,9 @@
 
 				<ul>
 				  <li>
-		          Guest Lecture for Advanced Topics in Bayesian Statistics, Spring 2019
+		          STAT-S 520 Introduction to Statistics
 		          </li>
-		          <li>
-		          Teaching Assistant for Advanced Topics in Bayesian Statistics, Spring 2019
-		          </li>		
-		          <li>
-		          Guest Lecture for Statistical Uncertainty Quantification Fall 2018
-		          </li>			
-		          <li>
-		          Teaching Assistant for Introduction to Probability, Spring 2016
-		          </li>
-  		          <li>
-		          Teaching Assistant for Probability Theory I, Fall 2015
-		          </li>
+		          
 
 		        </ul>
 
