--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 
 				<ul>
 				  <li>
-		          STAT-S 520 Introduction to Statistics
+		          STAT-S 520 Introduction to Statistics (Fall 2020)
 		          </li>
 		          
 
