--- a/index.html
+++ b/index.html
@@ -287,13 +287,13 @@
 		                </font>
 		              </strong>
 		              <br>
-		              (Submitted)
+		              Statistics in Medicine, 2020; 39: 2139–2151.
 		              <br>
 		              Yuliang Li, <a href = "http://www.ams.jhu.edu/~yxu70/index.html">Yanxun Xu</a>, 
 		              <font color="black"><strong>Fangzheng Xie</strong></font>, and 
 		              <a href = "http://people.vcu.edu/~dbandyop/">Dipankar Bandyopadhyay</a>
 		              <!-- <br> -->
-		              [<a href="https://arxiv.org/abs/1902.05680" target="_blank" title=""><strong>arXiv</strong></a>]
+		              [<a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.8536" target="_blank" title=""><strong>Link</strong></a>]
 		            </span>
 		        </li>
 		    </ul>
