--- a/index.html
+++ b/index.html
@@ -49,7 +49,12 @@
 			<div class="body">
 
 				<p>I am an assistant professor in the Department of Statistics at Indiana University. 
-				My major research focuses on developing Bayesian methods for various statistical problems with strong theoretical support. Specifically, I have been focusing on Bayes theory and methods for network data and high-dimensional problems, nonparametric Bayes, and Bayesian methods for computer experiments and uncertainty quantification. I have also developed new Bayesian methods for computational biology. 
+				My major research focuses on developing Bayesian methods for various statistical problems with strong theoretical support. 
+				Specifically, I have been focusing on Bayes theory and methods for network data and high-dimensional problems, nonparametric Bayes, 
+				and Bayesian methods for computer experiments and uncertainty quantification. 
+				On the application side, I am also interested in designing new Bayesian methods for computational biology. 
+				</p>
+				<p>
 				I received my Ph.D. from the Department of Applied Mathematics and Statistics at Johns Hopkins University under the supervision of Dr. Yanxun Xu. 
 				</p>
 
