--- a/index.html
+++ b/index.html
@@ -77,7 +77,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <!-- <section id="content2" class="inner-w3layouts-wrap"> -->
                     <section id="content2" class="inner-w3layouts-wrap">
                         <h3 class="head-w3ls"><font color = "black">About me</font></h3>
-                        <p style="text-align:left;"><font color = "black">I am an assistant professor in the Department of Statistics at Indiana University. I am broadly interested in developing Bayesian methods for various statistical problems with strong theoretical support. Specifically, I have been focusing on Bayes theory and methods for network data and high-dimensional problems, nonparametric Bayes, and Bayesian methods for computer experiments and uncertainty quantification. On the application side, I am also interested in designing new Bayesian methods for computational biology.</font></p>
+                        <p style="text-align:left;"><font color = "black">I am an assistant professor in the Department of Statistics at Indiana University. 
+                            I am broadly interested in developing Bayesian methods for various statistical problems with strong theoretical support. 
+                            Specifically, I have been focusing on Bayes theory and methods for network data and high-dimensional problems, nonparametric Bayes, 
+                            and Bayesian methods for computer experiments and uncertainty quantification. 
+                            On the application side, I am also interested in designing new Bayesian methods for computational biology.</font></p>
+                        <p style="text-align:left;"><font color = "black">
+                        I received my Ph.D. from the Department of Applied Mathematics and Statistics at Johns Hopkins University under the supervision of Dr. Yanxun Xu.
+                            </font></p>
                     </section>
                     <section id="content3" class="inner-w3layouts-wrap">
                         <h3 class="head-w3ls"><font color = "black">Preprints</font></h3>
