--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <input id="tab4" type="radio" class="w3layouts-sm" name="tabs">
                     <label for="tab4"><span class="fa fa-envelope" aria-hidden="true"></span> Teaching</label>
                     <section id="content1" class="inner-w3layouts-wrap">
-                        <img src="images/DSC05521.jpg" class="admin img-fluid" alt="mobile-image">
+                        <img src="DSC05521.jpg" class="admin img-fluid">
                         <h2><font color = "black">Fangzheng Xie</font></h2>
                         <p><font color = "black">
                          <br>Assistant Professor <br>Department of Statistics<br>Indiana University<br>919 E. 10<sup>th</sup>&nbsp;Street <br>Bloomington, IN 47408
