--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                   <!-- <br> -->
                                   <!-- <br> -->
                                   <!-- <br> -->
-                                  [<a href="https://projecteuclid.org/euclid.ejs/1569895281" target="_blank" title=""><strong>Link</strong></a>]
+                                  [<a href="https://projecteuclid.org/euclid.ba/1550826222" target="_blank" title=""><strong>Link</strong></a>]
                                 </span>
                             <!-- </font> -->
                         </li>
