--- a/index.html
+++ b/index.html
@@ -85,6 +85,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <p style="text-align:left;"><font color = "black">
                         I received my Ph.D. from the Department of Applied Mathematics and Statistics at Johns Hopkins University under the supervision of Dr. Yanxun Xu.
                             </font></p>
+                        
+                        <h3 class="head-w3ls" style="margin-top:2cm;"><font color = "black">Education</font></h3>
+                        
+                        <li style="text-align:left;">
+                        Ph.D. in Applied Mathematics and Statistics, Johns Hopkins University, 2020 
+                      </li>
+                      <li style="text-align:left;">
+                        M.A. in Applied Mathematics and Statistics, Johns Hopkins University, 2016
+                      </li>
+                      <li style="text-align:left;">
+                        B.Sc. in Mathematics and Applied Mathematics, South China University of Technology, 2014
+                      </li>
                     </section>
                     <section id="content3" class="inner-w3layouts-wrap">
                         <h3 class="head-w3ls"><font color = "black">Preprints</font></h3>
