--- a/publication/index.html
+++ b/publication/index.html
@@ -518,7 +518,7 @@
 <p><strong>Euclidean Representation of Low-Rank Matrices and Its Statistical Applications</strong><br><strong>Fangzheng Xie</strong> (Technical report) [<a href="https://arxiv.org/abs/2103.04220"><strong>arXiv</strong></a>]</p>
 </li>
 <li>
-<p><strong>Efficient Estimation for Random Dot Product Graphs via a One-step Procedure</strong><br><strong>Fangzheng Xie</strong>, Yanxun Xu, (Revision submitted) [<a href="https://arxiv.org/abs/1910.04333"><strong>arXiv</strong></a>]</p>
+<p><strong>Efficient Estimation for Random Dot Product Graphs via a One-step Procedure</strong><br><strong>Fangzheng Xie</strong>, Yanxun Xu (Revision submitted) [<a href="https://arxiv.org/abs/1910.04333"><strong>arXiv</strong></a>]</p>
 </li>
 <li>
 <p><strong>A Theoretical Framework of the Scaled Gaussian Stochastic Process in Prediction and Calibration</strong><br>Mengyang Gu, <strong>Fangzheng Xie</strong>, Long Wang (Technical report) [<a href="https://arxiv.org/abs/1807.03829"><strong>arXiv</strong></a>]</p>
