--- a/publication/index.html
+++ b/publication/index.html
@@ -515,10 +515,13 @@
 <!--### Theoretical and Methodology Works    -->
 <ul>
 <li>
+<p><strong>Entrywise limit theorems of eigenvectors and their one-step refinement for sparse random graphs</strong><br><strong>Fangzheng Xie</strong> (Technical report) [<a href="https://arxiv.org/abs/2106.09840"><strong>arXiv</strong></a>]</p>
+</li>
+<li>
 <p><strong>Euclidean Representation of Low-Rank Matrices and Its Statistical Applications</strong><br><strong>Fangzheng Xie</strong> (Technical report) [<a href="https://arxiv.org/abs/2103.04220"><strong>arXiv</strong></a>]</p>
 </li>
 <li>
-<p><strong>Efficient Estimation for Random Dot Product Graphs via a One-step Procedure</strong><br><strong>Fangzheng Xie</strong>, Yanxun Xu (Revision submitted) [<a href="https://arxiv.org/abs/1910.04333"><strong>arXiv</strong></a>]</p>
+<p><strong>Efficient Estimation for Random Dot Product Graphs via a One-step Procedure</strong><br><strong>Fangzheng Xie</strong>, Yanxun Xu <br> <font color = "red"> <i>Journal of the American Statistical Association</i></font>, accepted for publication, 2021. [<a href="/materials/EfficientRDPG.pdf"><strong>Manuscript</strong></a>] [<a href="/materials/EfficientRDPG_Supplement.pdf" target="_blank" title=""><strong>Supplement</strong></a>]</p>
 </li>
 <li>
 <p><strong>A Theoretical Framework of the Scaled Gaussian Stochastic Process in Prediction and Calibration</strong><br>Mengyang Gu, <strong>Fangzheng Xie</strong>, Long Wang (Technical report) [<a href="https://arxiv.org/abs/1807.03829"><strong>arXiv</strong></a>]</p>
@@ -527,13 +530,13 @@
 <p><strong>Simultaneous Learning the Dimension and Parameter of a Statistical Model with Big Data</strong><br>Long Wang, <strong>Fangzheng Xie</strong>, Yanxun Xu (Under revision).</p>
 </li>
 <li>
-<p><strong>Bayesian Estimation of Sparse Spiked Covariance Matrices in High Dimensions</strong><br><strong>Fangzheng Xie</strong>, Yanxun Xu, Carey Priebe, and Joshua Cape (Technical report) [<a href="http://arxiv.org/abs/1808.07433"><strong>arXiv</strong></a>]</p>
+<p><strong>Bayesian Estimation of Sparse Spiked Covariance Matrices in High Dimensions</strong><br><strong>Fangzheng Xie</strong>, Yanxun Xu, Carey Priebe, and Joshua Cape (Under revision) [<a href="http://arxiv.org/abs/1808.07433"><strong>arXiv</strong></a>]</p>
 </li>
 <li>
-<p><strong>Bayesian Projected Calibration of Computer Models</strong><br><strong>Fangzheng Xie</strong>, Yanxun Xu  <br> <font color = "red"> <i>Journal of the American Statistical Association</i></font>, accepted for publication, 2020*.[<a href="https://amstat.tandfonline.com/doi/abs/10.1080/01621459.2020.1753519?casa_token=PYAZ9qfLQ5cAAAAA%3AnBkPeOyepfwUkKs4TtbijCzyxNdrUmPLlFssVw1VZ8pIGC-fM6V5zvJpW8nljRITnrcUeQyzxBx4Kg&journalCode=uasa20#.XxeVAlxKiUk"><strong>Link</strong></a>][<a href="materials/BayProjected_0.1.0.tar.gz" target="_blank" title=""><strong>R Package</strong></a>]</p>
+<p><strong>Bayesian Projected Calibration of Computer Models</strong><br><strong>Fangzheng Xie</strong>, Yanxun Xu  <br> <font color = "red"> <i>Journal of the American Statistical Association</i></font>, accepted for publication, 2020. [<a href="https://amstat.tandfonline.com/doi/abs/10.1080/01621459.2020.1753519?casa_token=PYAZ9qfLQ5cAAAAA%3AnBkPeOyepfwUkKs4TtbijCzyxNdrUmPLlFssVw1VZ8pIGC-fM6V5zvJpW8nljRITnrcUeQyzxBx4Kg&journalCode=uasa20#.XxeVAlxKiUk"><strong>Link</strong></a>] [<a href="/materials/BayProjected_0.1.0.tar.gz" target="_blank" title=""><strong>R Package</strong></a>]</p>
 </li>
 <li>
-<p><strong>BAREB: A Bayesian repulsive biclustering model for periodontal data</strong> <br> Yuliang Li, Dipankar Bandyopadhyay, <strong>Fangzheng Xie</strong>, and Yanxun Xu <br>  <em>Statistics in Medicine, 2020; 39(16): 2139-2151.</em> [<a href = "https://onlinelibrary.wiley.com/doi/abs/10.1002/sim.8536" target="_blank" title=""><strong>Link</strong></a>] [<a href="https://github.com/YanxunXu/BAREB" target="_blank" title=""><strong>Installation R Script</strong></a>]</p>
+<p><strong>BAREB: A Bayesian repulsive biclustering model for periodontal data</strong> <br> Yuliang Li, Dipankar Bandyopadhyay, <strong>Fangzheng Xie</strong>, and Yanxun Xu <br>  <em>Statistics in Medicine, 2020; 39(16): 2139-2151.</em> [<a href = "https://onlinelibrary.wiley.com/doi/abs/10.1002/sim.8536" target="_blank" title=""><strong>Link</strong></a>] [<a href="https://github.com/YanxunXu/BAREB" target="_blank" title=""><strong>R Package</strong></a>]</p>
 </li>
 <li>
 <p><strong>Optimal Bayesian Estimation for Random Dot Product Graphs</strong> <br> <strong>Fangzheng Xie</strong>, Yanxun Xu <br>  <font color = "red"><i>Biometrika</i></font>, 2020, 107(4): 875-889. [<a href="https://academic.oup.com/biomet/article-abstract/doi/10.1093/biomet/asaa031/5867841?redirectedFrom=fulltext"><strong>Link</strong></a>]</p>
@@ -550,7 +553,7 @@
 <i>Bayesian Analysis</i></font>, 2020; 15(1): 159-186. [<a href="https://projecteuclid.org/euclid.ba/1550826222" target="_blank" title=""><strong>Link</strong></a>]</p>
 </li>
 <li>
-<p><strong>BayCount: A Bayesian Decomposition Method for Inferring Tumor Heterogeneity using RNA-Seq Counts</strong> <br> <strong>Fangzheng Xie</strong>, Mingyuan Zhou, Yanxun Xu <br>  <font color = #CC5500><i>Annals of Applied Statistics</i></font>, 2018, Vol. 12, No. 3, 1605-1627. [<a href = "https://projecteuclid.org/euclid.aoas/1536652967" target="_blank" title=""><strong>Link</strong></a>] [<a href="materials/BayCount_0.1.0.tar.gz" target="_blank" title=""><strong>R Package</strong></a>] [<a href="materials/Installation_script.R" target="_blank" title=""><strong>Installation R Script</strong></a>]</p>
+<p><strong>BayCount: A Bayesian Decomposition Method for Inferring Tumor Heterogeneity using RNA-Seq Counts</strong> <br> <strong>Fangzheng Xie</strong>, Mingyuan Zhou, Yanxun Xu <br>  <font color = #CC5500><i>Annals of Applied Statistics</i></font>, 2018, Vol. 12, No. 3, 1605-1627. [<a href = "https://projecteuclid.org/euclid.aoas/1536652967" target="_blank" title=""><strong>Link</strong></a>] [<a href="/materials/BayCount_0.1.0.tar.gz" target="_blank" title=""><strong>R Package</strong></a>] [<a href="/materials/Installation_script.R" target="_blank" title=""><strong>Installation R Script</strong></a>]</p>
 </li>
 </ul>
 
