--- a/publication/index.html
+++ b/publication/index.html
@@ -553,7 +553,7 @@
 <i>Bayesian Analysis</i></font>, 2020; 15(1): 159-186. [<a href="https://projecteuclid.org/euclid.ba/1550826222" target="_blank" title=""><strong>Link</strong></a>]</p>
 </li>
 <li>
-<p><strong>BayCount: A Bayesian Decomposition Method for Inferring Tumor Heterogeneity using RNA-Seq Counts</strong> <br> <strong>Fangzheng Xie</strong>, Mingyuan Zhou, Yanxun Xu <br>  <font color = #CC5500><i>Annals of Applied Statistics</i></font>, 2018, Vol. 12, No. 3, 1605-1627. [<a href = "https://projecteuclid.org/euclid.aoas/1536652967" target="_blank" title=""><strong>Link</strong></a>] [<a href="/materials/BayCount_0.1.0.tar.gz" target="_blank" title=""><strong>R Package</strong></a>] [<a href="/materials/Installation_script.R" target="_blank" title=""><strong>Installation R Script</strong></a>]</p>
+<p><strong>BayCount: A Bayesian Decomposition Method for Inferring Tumor Heterogeneity using RNA-Seq Counts</strong> <br> <strong>Fangzheng Xie</strong>, Mingyuan Zhou, Yanxun Xu <br>  <font color = #CC5500><i>Annals of Applied Statistics</i></font>, 2018, Vol. 12, No. 3, 1605-1627. [<a href = "https://projecteuclid.org/euclid.aoas/1536652967" target="_blank" title=""><strong>Link</strong></a>] [<a href="/materials/BayCount_0.1.0.tar.gz" target="_blank" title=""><strong>R Package</strong></a>] [<a href="/materials/Installation_script.r" target="_blank" title=""><strong>Installation R Script</strong></a>]</p>
 </li>
 </ul>
 
