--- a/teaching/index.html
+++ b/teaching/index.html
@@ -512,6 +512,8 @@
       <h1>Teaching</h1>
       
       <ul>
+<li>STAT-S 722 Advanced Statistical Theory (Spring 2022)</li>
+<li>STAT-S 721 Advanced Statistical Theory (Fall 2021)</li>
 <li>STAT-S 520 Introduction to Statistics (Fall 2020, Spring 2021)</li>
 </ul>
 
