--- a/publication/index.html
+++ b/publication/index.html
@@ -515,7 +515,7 @@
 <!--### Theoretical and Methodology Works    -->
 <ul>
 <li>
-<p><strong>Entrywise limit theorems of eigenvectors and their one-step refinement for sparse random graphs</strong><br><strong>Fangzheng Xie</strong> (Technical report) [<a href="https://arxiv.org/abs/2106.09840"><strong>arXiv</strong></a>]</p>
+<p><strong>Entrywise limit theorems of eigenvectors for signal-plus-noise matrix models with weak signals</strong><br><strong>Fangzheng Xie</strong> (Technical report) [<a href="https://arxiv.org/abs/2106.09840"><strong>arXiv</strong></a>]</p>
 </li>
 <li>
 <p><strong>Euclidean Representation of Low-Rank Matrices and Its Statistical Applications</strong><br><strong>Fangzheng Xie</strong> (Technical report) [<a href="https://arxiv.org/abs/2103.04220"><strong>arXiv</strong></a>]</p>
@@ -527,13 +527,15 @@
 <p><strong>A Theoretical Framework of the Scaled Gaussian Stochastic Process in Prediction and Calibration</strong><br>Mengyang Gu, <strong>Fangzheng Xie</strong>, Long Wang (Technical report) [<a href="https://arxiv.org/abs/1807.03829"><strong>arXiv</strong></a>]</p>
 </li>
 <li>
-<p><strong>Simultaneous Learning the Dimension and Parameter of a Statistical Model with Big Data</strong><br>Long Wang, <strong>Fangzheng Xie</strong>, Yanxun Xu (Under revision).</p>
+<p><strong>Simultaneous Learning the Dimension and Parameter of a Statistical Model with Big Data</strong><br>Long Wang, <strong>Fangzheng Xie</strong>, Yanxun Xu <br>  <em>Statistics in Biosciences, accepted for publication, 2022.</em> [<a href = "https://link.springer.com/article/10.1007/s12561-021-09324-4" target="_blank" title=""><strong>Link</strong></a>]</p>
 </li>
 <li>
-<p><strong>Bayesian Estimation of Sparse Spiked Covariance Matrices in High Dimensions</strong><br><strong>Fangzheng Xie</strong>, Yanxun Xu, Carey Priebe, and Joshua Cape (Under revision) [<a href="http://arxiv.org/abs/1808.07433"><strong>arXiv</strong></a>]</p>
+<p><strong>Bayesian Sparse Spiked Covariance Model with a Continuous Matrix Shrinkage Prior</strong><br><strong>Fangzheng Xie</strong>, Yanxun Xu, Carey Priebe, and Joshua Cape <br>
+<font color = #CC5500>
+<i>Bayesian Analysis</i></font>, accepted for publication, 2022. [<a href="https://projecteuclid.org/journals/bayesian-analysis/advance-publication/Bayesian-Sparse-Spiked-Covariance-Model-with-a-Continuous-Matrix-Shrinkage/10.1214/21-BA1292.full" target="_blank" title=""><strong>Link</strong></a>]</p>
 </li>
 <li>
-<p><strong>Bayesian Projected Calibration of Computer Models</strong><br><strong>Fangzheng Xie</strong>, Yanxun Xu  <br> <font color = "red"> <i>Journal of the American Statistical Association</i></font>, accepted for publication, 2020. [<a href="https://amstat.tandfonline.com/doi/abs/10.1080/01621459.2020.1753519?casa_token=PYAZ9qfLQ5cAAAAA%3AnBkPeOyepfwUkKs4TtbijCzyxNdrUmPLlFssVw1VZ8pIGC-fM6V5zvJpW8nljRITnrcUeQyzxBx4Kg&journalCode=uasa20#.XxeVAlxKiUk"><strong>Link</strong></a>] [<a href="/materials/BayProjected_0.1.0.tar.gz" target="_blank" title=""><strong>R Package</strong></a>]</p>
+<p><strong>Bayesian Projected Calibration of Computer Models</strong><br><strong>Fangzheng Xie</strong>, Yanxun Xu  <br> <font color = "red"> <i>Journal of the American Statistical Association</i></font>, 2022; 116 (536): 1965-1982. [<a href="https://amstat.tandfonline.com/doi/abs/10.1080/01621459.2020.1753519?casa_token=PYAZ9qfLQ5cAAAAA%3AnBkPeOyepfwUkKs4TtbijCzyxNdrUmPLlFssVw1VZ8pIGC-fM6V5zvJpW8nljRITnrcUeQyzxBx4Kg&journalCode=uasa20#.XxeVAlxKiUk"><strong>Link</strong></a>] [<a href="/materials/BayProjected_0.1.0.tar.gz" target="_blank" title=""><strong>R Package</strong></a>]</p>
 </li>
 <li>
 <p><strong>BAREB: A Bayesian repulsive biclustering model for periodontal data</strong> <br> Yuliang Li, Dipankar Bandyopadhyay, <strong>Fangzheng Xie</strong>, and Yanxun Xu <br>  <em>Statistics in Medicine, 2020; 39(16): 2139-2151.</em> [<a href = "https://onlinelibrary.wiley.com/doi/abs/10.1002/sim.8536" target="_blank" title=""><strong>Link</strong></a>] [<a href="https://github.com/YanxunXu/BAREB" target="_blank" title=""><strong>R Package</strong></a>]</p>
@@ -549,7 +551,7 @@
 </li>
 <li>
 <p><strong>Adaptive Bayesian Nonparametric Regression using Kernel Mixture of Polynomials with Application to Partial Linear Model</strong> <br> <strong>Fangzheng Xie</strong>, Yanxun Xu <br>
-<font color = #CC5500> 
+<font color = #CC5500>
 <i>Bayesian Analysis</i></font>, 2020; 15(1): 159-186. [<a href="https://projecteuclid.org/euclid.ba/1550826222" target="_blank" title=""><strong>Link</strong></a>]</p>
 </li>
 <li>
