--- a/publication/index.html
+++ b/publication/index.html
@@ -515,6 +515,9 @@
 <!--### Theoretical and Methodology Works    -->
 <ul>
 <li>
+<p><strong>Eigenvector-Assisted Statistical Inference for Signal-Plus-Noise Matrix Models</strong><br><strong>Fangzheng Xie</strong>, Dingbo Wu (Technical report) [<a href="https://arxiv.org/abs/2203.16688"><strong>arXiv</strong></a>]</p>
+</li>
+<li>
 <p><strong>Entrywise limit theorems of eigenvectors for signal-plus-noise matrix models with weak signals</strong><br><strong>Fangzheng Xie</strong> (Technical report) [<a href="https://arxiv.org/abs/2106.09840"><strong>arXiv</strong></a>]</p>
 </li>
 <li>
