--- a/publication/index.html
+++ b/publication/index.html
@@ -515,6 +515,9 @@
 <!--### Theoretical and Methodology Works    -->
 <ul>
 <li>
+<p><strong>Frequentist and Bayesian inference of random graphs with a surrogate likelihood function</strong><br>Dingbo Wu<strong>Fangzheng Xie</strong> (Technical report) [<a href="/materials/lgraph_0.1.0.tar.gz" target="_blank" title=""><strong>R Package</strong></a>]</p>
+</li>
+<li>
 <p><strong>Eigenvector-Assisted Statistical Inference for Signal-Plus-Noise Matrix Models</strong><br><strong>Fangzheng Xie</strong>, Dingbo Wu (Technical report) [<a href="https://arxiv.org/abs/2203.16688"><strong>arXiv</strong></a>]</p>
 </li>
 <li>
@@ -524,10 +527,10 @@
 <p><strong>Euclidean Representation of Low-Rank Matrices and Its Statistical Applications</strong><br><strong>Fangzheng Xie</strong> (Technical report) [<a href="https://arxiv.org/abs/2103.04220"><strong>arXiv</strong></a>]</p>
 </li>
 <li>
-<p><strong>Efficient Estimation for Random Dot Product Graphs via a One-step Procedure</strong><br><strong>Fangzheng Xie</strong>, Yanxun Xu <br> <font color = "red"> <i>Journal of the American Statistical Association</i></font>, accepted for publication, 2021. [<a href="/materials/EfficientRDPG.pdf"><strong>Manuscript</strong></a>] [<a href="/materials/EfficientRDPG_Supplement.pdf" target="_blank" title=""><strong>Supplement</strong></a>]</p>
+<p><strong>Efficient Estimation for Random Dot Product Graphs via a One-step Procedure</strong><br><strong>Fangzheng Xie</strong>, Yanxun Xu <br> <font color = "red"> <i>Journal of the American Statistical Association</i></font>, accepted for publication, 2021. [<a href = "https://www.tandfonline.com/doi/abs/10.1080/01621459.2021.1948419?journalCode=uasa20" target="_blank" title=""><strong>Link</strong></a>]</p>
 </li>
 <li>
-<p><strong>A Theoretical Framework of the Scaled Gaussian Stochastic Process in Prediction and Calibration</strong><br>Mengyang Gu, <strong>Fangzheng Xie</strong>, Long Wang (Technical report) [<a href="https://arxiv.org/abs/1807.03829"><strong>arXiv</strong></a>]</p>
+<p><strong>A Theoretical Framework of the Scaled Gaussian Stochastic Process in Prediction and Calibration</strong><br>Mengyang Gu, <strong>Fangzheng Xie</strong>, Long Wang <em>SIAM/ASA Journal of Uncertainty Quantification, accepted for publication, 2022, 2022.</em> [<a href="https://arxiv.org/abs/1807.03829"><strong>arXiv</strong></a>]</p>
 </li>
 <li>
 <p><strong>Simultaneous Learning the Dimension and Parameter of a Statistical Model with Big Data</strong><br>Long Wang, <strong>Fangzheng Xie</strong>, Yanxun Xu <br>  <em>Statistics in Biosciences, accepted for publication, 2022.</em> [<a href = "https://link.springer.com/article/10.1007/s12561-021-09324-4" target="_blank" title=""><strong>Link</strong></a>]</p>
