--- a/publication/index.html
+++ b/publication/index.html
@@ -515,7 +515,7 @@
 <!--### Theoretical and Methodology Works    -->
 <ul>
 <li>
-<p><strong>Frequentist and Bayesian inference of random graphs with a surrogate likelihood function</strong><br>Dingbo Wu<strong>Fangzheng Xie</strong> (Technical report) [<a href="/materials/lgraph_0.1.0.tar.gz" target="_blank" title=""><strong>R Package</strong></a>]</p>
+<p><strong>Frequentist and Bayesian inference of random graphs with a surrogate likelihood function</strong><br>Dingbo Wu, <strong>Fangzheng Xie</strong> (Technical report) [<a href="/materials/lgraph_0.1.0.tar.gz" target="_blank" title=""><strong>R Package</strong></a>]</p>
 </li>
 <li>
 <p><strong>Eigenvector-Assisted Statistical Inference for Signal-Plus-Noise Matrix Models</strong><br><strong>Fangzheng Xie</strong>, Dingbo Wu (Technical report) [<a href="https://arxiv.org/abs/2203.16688"><strong>arXiv</strong></a>]</p>
@@ -530,7 +530,7 @@
 <p><strong>Efficient Estimation for Random Dot Product Graphs via a One-step Procedure</strong><br><strong>Fangzheng Xie</strong>, Yanxun Xu <br> <font color = "red"> <i>Journal of the American Statistical Association</i></font>, accepted for publication, 2021. [<a href = "https://www.tandfonline.com/doi/abs/10.1080/01621459.2021.1948419?journalCode=uasa20" target="_blank" title=""><strong>Link</strong></a>]</p>
 </li>
 <li>
-<p><strong>A Theoretical Framework of the Scaled Gaussian Stochastic Process in Prediction and Calibration</strong><br>Mengyang Gu, <strong>Fangzheng Xie</strong>, Long Wang <em>SIAM/ASA Journal of Uncertainty Quantification, accepted for publication, 2022, 2022.</em> [<a href="https://arxiv.org/abs/1807.03829"><strong>arXiv</strong></a>]</p>
+<p><strong>A Theoretical Framework of the Scaled Gaussian Stochastic Process in Prediction and Calibration</strong><br>Mengyang Gu, <strong>Fangzheng Xie</strong>, Long Wang <br> <em>SIAM/ASA Journal of Uncertainty Quantification, accepted for publication, 2022.</em> [<a href="https://arxiv.org/abs/1807.03829"><strong>arXiv</strong></a>]</p>
 </li>
 <li>
 <p><strong>Simultaneous Learning the Dimension and Parameter of a Statistical Model with Big Data</strong><br>Long Wang, <strong>Fangzheng Xie</strong>, Yanxun Xu <br>  <em>Statistics in Biosciences, accepted for publication, 2022.</em> [<a href = "https://link.springer.com/article/10.1007/s12561-021-09324-4" target="_blank" title=""><strong>Link</strong></a>]</p>
@@ -544,7 +544,7 @@
 <p><strong>Bayesian Projected Calibration of Computer Models</strong><br><strong>Fangzheng Xie</strong>, Yanxun Xu  <br> <font color = "red"> <i>Journal of the American Statistical Association</i></font>, 2022; 116 (536): 1965-1982. [<a href="https://amstat.tandfonline.com/doi/abs/10.1080/01621459.2020.1753519?casa_token=PYAZ9qfLQ5cAAAAA%3AnBkPeOyepfwUkKs4TtbijCzyxNdrUmPLlFssVw1VZ8pIGC-fM6V5zvJpW8nljRITnrcUeQyzxBx4Kg&journalCode=uasa20#.XxeVAlxKiUk"><strong>Link</strong></a>] [<a href="/materials/BayProjected_0.1.0.tar.gz" target="_blank" title=""><strong>R Package</strong></a>]</p>
 </li>
 <li>
-<p><strong>BAREB: A Bayesian repulsive biclustering model for periodontal data</strong> <br> Yuliang Li, Dipankar Bandyopadhyay, <strong>Fangzheng Xie</strong>, and Yanxun Xu <br>  <em>Statistics in Medicine, 2020; 39(16): 2139-2151.</em> [<a href = "https://onlinelibrary.wiley.com/doi/abs/10.1002/sim.8536" target="_blank" title=""><strong>Link</strong></a>] [<a href="https://github.com/YanxunXu/BAREB" target="_blank" title=""><strong>R Package</strong></a>]</p>
+<p><strong>BAREB: A Bayesian repulsive biclustering model for periodontal data</strong> <br> Yuliang Li, Dipankar Bandyopadhyay, <strong>Fangzheng Xie</strong>, and Yanxun Xu <br>  <em>Statistics in Medicine, 2020; 39(16): 2139-2151.</em> [<a href = "https://onlinelibrary.wiley.com/doi/abs/10.1002/sim.8536" target="_blank" title=""><strong>Link</strong></a>]</p>
 </li>
 <li>
 <p><strong>Optimal Bayesian Estimation for Random Dot Product Graphs</strong> <br> <strong>Fangzheng Xie</strong>, Yanxun Xu <br>  <font color = "red"><i>Biometrika</i></font>, 2020, 107(4): 875-889. [<a href="https://academic.oup.com/biomet/article-abstract/doi/10.1093/biomet/asaa031/5867841?redirectedFrom=fulltext"><strong>Link</strong></a>]</p>
@@ -556,12 +556,12 @@
 <p><strong>Rates of Contraction with respect to L2-distance for Bayesian Nonparametric Regression</strong> <br> <strong>Fangzheng Xie</strong>, Wei Jin, Yanxun Xu <br> <i><font color = #CC5500> Electronic Journal of Statistics</i></font>, 2019, Vol. 13, No. 2, 3485-3512. [<a href="https://projecteuclid.org/euclid.ejs/1569895281" target="_blank" title=""><strong>Link</strong></a>]</p>
 </li>
 <li>
+<p><strong>BayCount: A Bayesian Decomposition Method for Inferring Tumor Heterogeneity using RNA-Seq Counts</strong> <br> <strong>Fangzheng Xie</strong>, Mingyuan Zhou, Yanxun Xu <br>  <font color = #CC5500><i>Annals of Applied Statistics</i></font>, 2018, Vol. 12, No. 3, 1605-1627. [<a href = "https://projecteuclid.org/euclid.aoas/1536652967" target="_blank" title=""><strong>Link</strong></a>] [<a href="/materials/BayCount_0.1.0.tar.gz" target="_blank" title=""><strong>R Package</strong></a>] [<a href="/materials/Installation_script.r" target="_blank" title=""><strong>Installation R Script</strong></a>]</p>
+</li>
+<li>
 <p><strong>Adaptive Bayesian Nonparametric Regression using Kernel Mixture of Polynomials with Application to Partial Linear Model</strong> <br> <strong>Fangzheng Xie</strong>, Yanxun Xu <br>
 <font color = #CC5500>
 <i>Bayesian Analysis</i></font>, 2020; 15(1): 159-186. [<a href="https://projecteuclid.org/euclid.ba/1550826222" target="_blank" title=""><strong>Link</strong></a>]</p>
-</li>
-<li>
-<p><strong>BayCount: A Bayesian Decomposition Method for Inferring Tumor Heterogeneity using RNA-Seq Counts</strong> <br> <strong>Fangzheng Xie</strong>, Mingyuan Zhou, Yanxun Xu <br>  <font color = #CC5500><i>Annals of Applied Statistics</i></font>, 2018, Vol. 12, No. 3, 1605-1627. [<a href = "https://projecteuclid.org/euclid.aoas/1536652967" target="_blank" title=""><strong>Link</strong></a>] [<a href="/materials/BayCount_0.1.0.tar.gz" target="_blank" title=""><strong>R Package</strong></a>] [<a href="/materials/Installation_script.r" target="_blank" title=""><strong>Installation R Script</strong></a>]</p>
 </li>
 </ul>
 
