--- a/publication/index.html
+++ b/publication/index.html
@@ -515,7 +515,7 @@
 <!--### Theoretical and Methodology Works    -->
 <ul>
 <li>
-<p><strong>Statistical inference of random graphs with a surrogate likelihood function</strong><br>Dingbo Wu, <strong>Fangzheng Xie</strong> (Technical report) [<a href="/materials/lgraph_0.1.0.tar.gz" target="_blank" title=""><strong>R Package</strong></a>]</p>
+<p><strong>Statistical inference of random graphs with a surrogate likelihood function</strong><br>Dingbo Wu, <strong>Fangzheng Xie</strong> (Technical report) [<a href="https://arxiv.org/abs/2207.01702"><strong>arXiv</strong></a>] [<a href="/materials/lgraph_0.1.0.tar.gz" target="_blank" title=""><strong>R Package</strong></a>]</p>
 </li>
 <li>
 <p><strong>Eigenvector-Assisted Statistical Inference for Signal-Plus-Noise Matrix Models</strong><br><strong>Fangzheng Xie</strong>, Dingbo Wu (Technical report) [<a href="https://arxiv.org/abs/2203.16688"><strong>arXiv</strong></a>]</p>
