--- a/publication/index.html
+++ b/publication/index.html
@@ -515,6 +515,9 @@
 <!--### Theoretical and Methodology Works    -->
 <ul>
 <li>
+<p><strong>Bayesian Sparse Gaussian Mixture Model in High Dimensions</strong><br>Dapeng Yao, <strong>Fangzheng Xie</strong>, Yanxun Xu (Technical report) [<a href="https://arxiv.org/abs/2207.10301"><strong>arXiv</strong></a>]</p>
+</li>
+<li>
 <p><strong>Statistical inference of random graphs with a surrogate likelihood function</strong><br>Dingbo Wu, <strong>Fangzheng Xie</strong> (Technical report) [<a href="https://arxiv.org/abs/2207.01702"><strong>arXiv</strong></a>] [<a href="/materials/lgraph_0.1.0.tar.gz" target="_blank" title=""><strong>R Package</strong></a>]</p>
 </li>
 <li>
