--- a/publication/index.html
+++ b/publication/index.html
@@ -527,7 +527,7 @@
 <p><strong>Entrywise limit theorems of eigenvectors for signal-plus-noise matrix models with weak signals</strong><br><strong>Fangzheng Xie</strong> (Technical report) [<a href="https://arxiv.org/abs/2106.09840"><strong>arXiv</strong></a>]</p>
 </li>
 <li>
-<p><strong>Euclidean Representation of Low-Rank Matrices and Its Statistical Applications</strong><br><strong>Fangzheng Xie</strong> (Technical report) [<a href="https://arxiv.org/abs/2103.04220"><strong>arXiv</strong></a>]</p>
+<p><strong>Euclidean Representation of Low-Rank Matrices and Its Geometric Properties</strong><br><strong>Fangzheng Xie</strong> <br> <font color = "red"> <i>SIAM Journal on Matrix Analysis and Applications</i></font>, accepted for publication, 2023. [<a href="/materials/M148912.pdf" target="_blank" title=""><strong>Manuscript</strong></a>]</p>
 </li>
 <li>
 <p><strong>Efficient Estimation for Random Dot Product Graphs via a One-step Procedure</strong><br><strong>Fangzheng Xie</strong>, Yanxun Xu <br> <font color = "red"> <i>Journal of the American Statistical Association</i></font>, accepted for publication, 2021. [<a href = "https://www.tandfonline.com/doi/abs/10.1080/01621459.2021.1948419?journalCode=uasa20" target="_blank" title=""><strong>Link</strong></a>]</p>
