--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 			<div class="body">
 
-				<p>I am an assistant professor in the <a href="https://stat.indiana.edu/">Department of Statistics</a> at <a href="https://www.iu.edu/index.html">Indiana University</a>. My research interests lie in developing theoretical foundations and computational tools for learning large and complex data. The specific topics I have been interested in include low-rank random matrix models, statistical network analysis, nonparametric Bayes, computer models, and uncertainty quantification. On the application side, I am also interested in designing new Bayesian methods for computational biology.
+				<p>I am an assistant professor in the <a href="https://stat.indiana.edu/">Department of Statistics</a> at <a href="https://www.iu.edu/index.html">Indiana University</a>. My research interests lie in developing theoretical foundations and computational tools for learning large and complex data, including spectral-based methods for low-rank random matrix models, statistical network analysis, high-dimensional statistics, and Bayesian nonparametrics. 
 
 				<p>I received my Ph.D. from the <a href="https://engineering.jhu.edu/ams/">Department of Applied Mathematics and Statistics</a> at <a href="https://www.jhu.edu/">Johns Hopkins University</a> under the supervision of <a href = "http://www.ams.jhu.edu/~yxu70/index.html">Yanxun Xu</a>.
 				</p>
@@ -73,12 +73,12 @@
 	          	<li>
 	          		Ph.D. in Applied Mathematics and Statistics, Johns Hopkins University, 2020
 	          	</li>
-<!-- 	          	<li>
+	          	<li>
 	          		M.A. in Applied Mathematics and Statistics, Johns Hopkins University, 2016
 	          	</li>
 	          	<li>
 	          		B.Sc. in Mathematics and Applied Mathematics, South China University of Technology, 2014
-	          	</li> -->
+	          	</li>
 	          </ul>
 	        <!-- </ul> -->
 	        <!-- <hr> -->
@@ -99,26 +99,47 @@
 
 			<a class="anchor" id="Research"></a>
 
-			<div class="title">Publications and Preprints</div>
+			<div class="title">Preprints and Technical Reports</div>
 			<!-- <div class="metadata">Jun 11, 2006 by Laoreet</div> -->
 
 			<div class="body">
 
 			<ul>
 <li>
-<p><strong>Bayesian Sparse Gaussian Mixture Model in High Dimensions</strong><br>Dapeng Yao, <strong>Fangzheng Xie</strong>, Yanxun Xu (Technical report) [<a href="https://arxiv.org/abs/2207.10301"><strong>arXiv</strong></a>]</p>
+<p><strong>Bias-Corrected Joint Spectral Embedding for Multilayer Networks with Invariant Subspace: Entrywise Eigenvector Perturbation and Inference</strong><br><strong>Fangzheng Xie</strong> (Technical report) </p>
+</li>
+<li>
+<p><strong>Spectral Norm Posterior Contraction in Bayesian Sparse Spiked Covariance Matrix Model</strong><br><strong>Fangzheng Xie</strong> (Revision submitted) </p>
+</li>
+<li>
+<p><strong>Higher-Order Entrywise Eigenvectors Analysis of Low-Rank Random Matrices: Bias Correction, Edgeworth Expansion, and Bootstrap</strong><br><strong>Fangzheng Xie</strong>, Yichi Zhang (Technical report) [<a href="https://arxiv.org/abs/2401.15033"><strong>arXiv</strong></a>]</p>
+</li>
+<li>
+<p><strong>Bayesian Sparse Gaussian Mixture Model in High Dimensions</strong><br>Dapeng Yao, <strong>Fangzheng Xie</strong>, Yanxun Xu (Revision submitted) [<a href="https://arxiv.org/abs/2207.10301"><strong>arXiv</strong></a>]</p>
 </li>
 <li>
 <p><strong>Statistical inference of random graphs with a surrogate likelihood function</strong><br>Dingbo Wu, <strong>Fangzheng Xie</strong> (Technical report) [<a href="https://arxiv.org/abs/2207.01702"><strong>arXiv</strong></a>] [<a href="materials/lgraph_0.1.0.tar.gz" target="_blank" title=""><strong>R Package</strong></a>]</p>
 </li>
+</ul>
+
+		<div class="divider"><span></span></div>
+
+
+<div class="title">Publications</div>
+			<!-- <div class="metadata">Jun 11, 2006 by Laoreet</div> -->
+
+			<div class="body">
+
+			<ul>
+
 <li>
 <p><strong>An Eigenvector-Assisted Estimation Framework for Signal-Plus-Noise Matrix Models</strong><br><strong>Fangzheng Xie</strong>, Dingbo Wu 
 <br>
-<font color = "red"> <i>Biometrika</i></font>, accepted for publication, 2023.
+<font color = "red"> <i>Biometrika</i></font>, 2024; 111 (2), 661-676
 [<a href="https://academic.oup.com/biomet/advance-article-abstract/doi/10.1093/biomet/asad058/7277189"><strong>Link</strong></a>]</p>
 </li>
 <li>
-<p><strong>Entrywise limit theorems for eigenvectors of signal-plus-noise matrix models with weak signals</strong><br><strong>Fangzheng Xie</strong> <br> <font color = "red"> <i>Bernoulli</i></font>, accepted for publication, 2023. [<a href="https://www.e-publications.org/ims/submission/BEJ/user/submissionFile/55044?confirm=b3aded45" target="_blank" title=""><strong>Link</strong></a>] [<a href="https://arxiv.org/abs/2106.09840" target="_blank" title=""><strong>arXiv</strong></a>]</p>
+<p><strong>Entrywise limit theorems for eigenvectors of signal-plus-noise matrix models with weak signals</strong><br><strong>Fangzheng Xie</strong> <br> <font color = "red"> <i>Bernoulli</i></font>, 2024; 30 (1), 388-418 [<a href="https://www.e-publications.org/ims/submission/BEJ/user/submissionFile/55044?confirm=b3aded45" target="_blank" title=""><strong>Link</strong></a>]</p>
 </li>
 <li>
 <p><strong>Euclidean Representation of Low-Rank Matrices and Its Geometric Properties</strong><br><strong>Fangzheng Xie</strong> <br> <font color = "red"> <i>SIAM Journal on Matrix Analysis and Applications</i></font>, 2023; 44 (2), 822-866. [<a href="https://epubs.siam.org/doi/full/10.1137/22M1489125" target="_blank" title=""><strong>Link</strong></a>]</p>
