--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
 				<p>I received my Ph.D. from the <a href="https://engineering.jhu.edu/ams/">Department of Applied Mathematics and Statistics</a> at <a href="https://www.jhu.edu/">Johns Hopkins University</a> under the supervision of <a href = "http://www.ams.jhu.edu/~yxu70/index.html">Yanxun Xu</a>.
 				</p>
 
-				<img class="left" src="img/avatar.JPG" width="250" alt="sample image">
+				<img class="left" src="img/avatar.JPG" width="300" alt="sample image">
 
 			</div>
 			<p class = "about-para">
 	        <!-- <ul> -->
-	          <strong style="font-size: 1em; line-height: 1.5;"><font size="4">Contact</font></strong>
-	          <br />
+	          <strong style="font-size: 1em; line-height: 1.5;"><font size="4">Email</font></strong>
+	          <!-- <br />
 	          Myles Brand Hall E210C
 	          <br />901 E. 10th Street
-	          <br />Bloomington IN 47408
+	          <br />Bloomington IN 47408 -->
 	          <br />fxie at iu dot edu</a>
 	        <!-- </ul> -->
 	        </p>
