--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<a href="#Research">Research</a>
 			<!-- <a href="#Awards">Awards</a> -->
 			<a href="#Teaching">Teaching</a>
-			<a href="materials/Fangzheng Xie Academic CV.pdf">CV</a>
+			<a href="materials/Fangzheng Xie CV.pdf">CV</a>
 		</div>
 
 		<div class="pattern"><span></span></div>
