--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 			<ul>
 <li>
-<p><strong>Bias-Corrected Joint Spectral Embedding for Multilayer Networks with Invariant Subspace: Entrywise Eigenvector Perturbation and Inference</strong><br><strong>Fangzheng Xie</strong> (Technical report) </p>
+<p><strong>Bias-Corrected Joint Spectral Embedding for Multilayer Networks with Invariant Subspace: Entrywise Eigenvector Perturbation and Inference</strong><br><strong>Fangzheng Xie</strong> (Technical report) [<a href="https://arxiv.org/abs/2406.07849"><strong>arXiv</strong></a>]</p>
 </li>
 <li>
 <p><strong>Spectral Norm Posterior Contraction in Bayesian Sparse Spiked Covariance Matrix Model</strong><br><strong>Fangzheng Xie</strong> (Revision submitted) </p>
