--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<a href="#Research">Research</a>
 			<!-- <a href="#Awards">Awards</a> -->
 			<a href="#Teaching">Teaching</a>
-			<a href="materials/Fangzheng Xie CV.pdf">CV</a>
+			<a href="materials/Fangzheng Xie Academic CV.pdf">CV</a>
 		</div>
 
 		<div class="pattern"><span></span></div>
@@ -106,12 +106,6 @@
 
 			<ul>
 <li>
-<p><strong>Bias-Corrected Joint Spectral Embedding for Multilayer Networks with Invariant Subspace: Entrywise Eigenvector Perturbation and Inference</strong><br><strong>Fangzheng Xie</strong> (Technical report) [<a href="https://arxiv.org/abs/2406.07849"><strong>arXiv</strong></a>]</p>
-</li>
-<li>
-<p><strong>Spectral Norm Posterior Contraction in Bayesian Sparse Spiked Covariance Matrix Model</strong><br><strong>Fangzheng Xie</strong> (Revision submitted) </p>
-</li>
-<li>
 <p><strong>Higher-Order Entrywise Eigenvectors Analysis of Low-Rank Random Matrices: Bias Correction, Edgeworth Expansion, and Bootstrap</strong><br><strong>Fangzheng Xie</strong>, Yichi Zhang (Technical report) [<a href="https://arxiv.org/abs/2401.15033"><strong>arXiv</strong></a>]</p>
 </li>
 <li>
@@ -131,6 +125,20 @@
 			<div class="body">
 
 			<ul>
+
+<li>
+<p><strong>Bias-Corrected Joint Spectral Embedding for Multilayer Networks with Invariant Subspace: Entrywise Eigenvector Perturbation and Inference</strong><br><strong>Fangzheng Xie</strong>
+<br>
+<font color = "red"> <i>IEEE Transactions on Information Theory</i></font>, 2024; 70 (12), 9036-9083
+[<a href="https://ieeexplore.ieee.org/document/10701477"><strong>Link</strong></a>]</p>
+</li>
+
+<li>
+<p><strong>Spectral Norm Posterior Contraction in Bayesian Sparse Spiked Covariance Matrix Model</strong><br><strong>Fangzheng Xie</strong> 
+<br>
+<font color = #CC5500> <i>Electronic Journal of Statistics</i></font>, 2024; 18 (2), 5198-5257
+[<a href="https://projecteuclid.org/journals/electronic-journal-of-statistics/volume-18/issue-2/Spectral-norm-posterior-contraction-in-Bayesian-sparse-spiked-covariance-matrix/10.1214/24-EJS2326.full"><strong>Link</strong></a>]</p>
+</li>
 
 <li>
 <p><strong>An Eigenvector-Assisted Estimation Framework for Signal-Plus-Noise Matrix Models</strong><br><strong>Fangzheng Xie</strong>, Dingbo Wu 
