--- a/index.html
+++ b/index.html
@@ -99,20 +99,28 @@
 
 			<a class="anchor" id="Research"></a>
 
-			<div class="title">Preprints and Technical Reports</div>
+			<div class="title">Working Papers</div>
 			<!-- <div class="metadata">Jun 11, 2006 by Laoreet</div> -->
 
 			<div class="body">
 
 			<ul>
-<li>
-<p><strong>Higher-Order Entrywise Eigenvectors Analysis of Low-Rank Random Matrices: Bias Correction, Edgeworth Expansion, and Bootstrap</strong><br><strong>Fangzheng Xie</strong>, Yichi Zhang (Technical report) [<a href="https://arxiv.org/abs/2401.15033"><strong>arXiv</strong></a>]</p>
-</li>
-<li>
-<p><strong>Bayesian Sparse Gaussian Mixture Model in High Dimensions</strong><br>Dapeng Yao, <strong>Fangzheng Xie</strong>, Yanxun Xu (Revision submitted) [<a href="https://arxiv.org/abs/2207.10301"><strong>arXiv</strong></a>]</p>
-</li>
-<li>
+				<li>
 <p><strong>Statistical inference of random graphs with a surrogate likelihood function</strong><br>Dingbo Wu, <strong>Fangzheng Xie</strong> (Technical report) [<a href="https://arxiv.org/abs/2207.01702"><strong>arXiv</strong></a>] [<a href="materials/lgraph_0.1.0.tar.gz" target="_blank" title=""><strong>R Package</strong></a>]</p>
+</li>
+</ul>
+
+<ul>
+	<li>
+<p><strong>SANVI: A Fast Spectral-Assisted Network Variational Inference
+Method with an Extended Surrogate Likelihood Function</strong><br>Dingbo Wu, <strong>Fangzheng Xie</strong> (In preparation)</p>
+</li>
+</ul>
+
+<ul>
+	<li>
+<p><strong>A Bayes factor function for high dimensional
+MANOVA using random projections</strong><br>Roger S. Zoh, Omkar M. Khandpekar, <strong>Fangzheng Xie</strong>, Lan Xue, Suvo Chatterjee, David Allison, Carmen Tekwe (Submitted)</p>
 </li>
 </ul>
 
@@ -125,6 +133,21 @@
 			<div class="body">
 
 			<ul>
+
+<li>
+<p><strong>Higher-Order Entrywise Eigenvectors Analysis of Low-Rank Random Matrices: Bias Correction, Edgeworth Expansion, and Bootstrap</strong><br><strong>Fangzheng Xie</strong>, Yichi Zhang 
+<br>
+<font color = "red"> <i>Annals of Statistics</i></font>, accepted for publication, 2025+
+[<a href="https://www.e-publications.org/ims/submission/AOS/user/submissionFile/63562?confirm=703ecd51"><strong>Link</strong></a>]</p>
+</li>
+
+<li>
+<p><strong>Bayesian Sparse Gaussian Mixture Model in High Dimensions</strong><br>Dapeng Yao, <strong>Fangzheng Xie</strong>, Yanxun Xu
+<br>
+<font color = "red"> <i>Journal of Machine Learning Research</i></font>, accepted for publication, 2025+
+[<a href="https://jmlr.org/papers/volume26/23-0142/23-0142.pdf"><strong>Link</strong></a>]</p>
+</li>
+
 
 <li>
 <p><strong>Bias-Corrected Joint Spectral Embedding for Multilayer Networks with Invariant Subspace: Entrywise Eigenvector Perturbation and Inference</strong><br><strong>Fangzheng Xie</strong>
